src/test/StaticFail2/StaticFail2.panda
class StaticFail2 {
    @static
    var test := "Hello"
}

class Test {
    @class
    method main() {
        var test := new StaticFail2()
        Console.writeLine(test.test)
        test.test := "Can't change it!"
    }
}